backend/service-discovery/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: betselot456/service_discovery:0.0.1-SNAPSHOT-c0eaab3
        ports:
        - containerPort: 8761
