backend/service-discovery/discovery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-svc
spec:
  selector:
    app: service-discovery
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  type: ClusterIP
