backend/service-discovery/discovery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
  namespace: sebsabi-dev
  # annotations:
    # kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - discovery.sebsabi.b.gebeyalearning.com
    secretName: discovery-tls-secret
  rules:
  - host: discovery.sebsabi.b.gebeyalearning.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discovery-server
            port:
              number: 8761
